--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
     </noscript>
     <div id="app">
       <div class="first-loading-wrp">
-        <h1>Pro</h1>
+        <h3>管理系统</h3>
         <div class="loading-wrp">
           <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
         </div>
-        <div style="display: flex; justify-content: center; align-items: center;">Ant Design</div>
+        <div style="display: flex; justify-content: center; align-items: center;">系统载入中,请稍后......</div>
       </div>
     </div>
     <!-- require cdn assets js -->
