处方模板页面

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     </noscript>
     <div id="app">
       <div class="first-loading-wrp">
-        <h3>管理系统</h3>
+        <h3>处方管理系统</h3>
         <div class="loading-wrp">
           <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
         </div>
